--- a/assets/css/analytics.css
+++ b/assets/css/analytics.css
@@ -1,3 +1,10 @@
+.bgMain::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+
 .firstPart{
     width: 100%;
     padding-top: 0;
