--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -113,7 +113,7 @@ body {
 .loginButton {
   font-size: 1rem;
   font-family: "Kodchasan", sans-serif;
-  margin-top: 20%;
+  margin-top: 15%;
   padding: 10px 10px 10px 0px;
   width: 100%;
   color: #fff;
@@ -137,18 +137,18 @@ body {
 
 .showPasswordLabel label {
     position: relative;
-    padding-left: 4px;
+    padding-left: 10px;
     cursor: pointer;
     color: #2d8b96;
     font-weight: 700;
-    font-size: 1.05rem;
+    font-size: .9rem;
     font-family: "Kodchasan", sans-serif;
 }
 
 .showPasswordLabel label::before {
     content: "";
     position: absolute;
-    left: -20%;
+    left: -25%;
     top: 50%;
     transform: translateY(-50%);
     width: 22px; /* Reduced width */
@@ -198,4 +198,27 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
+}
+
+
+.divider {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: 20px 0;
+  color: #439099;
+  font-family: "Kodchasan", sans-serif;
+}
+
+.divider::before,
+.divider::after {
+  content: "";
+  flex: 1;
+  width: 100px;               /* Ensure they have some width */
+  border-bottom: 2px solid #439099; 
+  margin: 0 10px;
+}
+
+.g_id_signin{
+  width: 67% !important;
 }
