--- a/assets/css/settings-profile.css
+++ b/assets/css/settings-profile.css
@@ -71,19 +71,95 @@
 
 .left-down {
   grid-row: 2 / span 2;
-  background-color: rgb(14, 78, 161);
-  padding: 10px;
   margin-top: 7%;
   margin-left: 2%;
   font-weight: 700;
-
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   background-color: rgba(14, 78, 161, 0);
-  padding: 10px;
+  color: #0B3236;
+  width: 100%;
+  height: 100%;
+}
+
+.headerLinks {
+  background-color: rgba(14, 78, 161, 0) !important;
+  font-weight: 700;
+  justify-content: space-between;
+  display: flex;
+  background-color: rgba(14, 78, 161, 0);
   color: rgb(0, 0, 0);
   text-align: center;
   width: 100%;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999 !important;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal-content {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  margin: 15% auto;
+  width: 90%;
+  max-width: 400px;
+  text-align: center;
+  border-radius: 10px;
+  box-sizing: border-box;
+  z-index: 10000 !important;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+#confirmLinks {
+  background-color: #3A909A;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#confirmLinks:hover {
+  background-color: #337d85;
+}
+
+.socmeds .social-box a {
+  display: inline-block;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.social-box img{
+  margin-bottom: 13px;
+}
+
+.social-box a {
+  display: block;
+  margin-top: 7px; 
+  text-decoration: none;
+  color: #595959;
+  margin-left: 2%;
+}
+.socmeds .social-box:first-child a {
+  margin-top: 0;
 }
 
 /* Right Side Sections */
@@ -133,9 +209,9 @@
 /* RightSide */
 
 .headerPIA {
-    display: flex; /* Use Flexbox to align items side by side */
-    justify-content: space-between; /* Spread the items apart */
-    align-items: center; /* Vertically center the items */
+  display: flex; /* Use Flexbox to align items side by side */
+  justify-content: space-between; /* Spread the items apart */
+  align-items: center; /* Vertically center the items */
 }
 
 .personalInfoAdd {
@@ -203,13 +279,14 @@ select {
   color: inherit;
 }
 
-
 /* Style for when the form is editable */
-.editable input, .editable select {
-    border-bottom: 1px solid #595959; /* Adds bottom border when editable */
+.editable input,
+.editable select {
+  border-bottom: 1px solid #595959; /* Adds bottom border when editable */
 }
 
 /* Optional: You can also change the cursor to indicate it's editable */
-.editable input, .editable select {
-    cursor: text;
+.editable input,
+.editable select {
+  cursor: text;
 }
