--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -224,3 +224,8 @@ body {
   max-width: 67% !important;
   background-color: #2d8b96;
 }
+
+
+.nsm7Bb-HzV7m-LgbsSe-MJoBVe{
+  min-width: 67% !important;
+}
