--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -225,6 +225,11 @@ body {
   background-color: #2d8b96;
 }
 
+.g_id_onload{
+  min-width: 67% !important;
+  max-width: 67% !important;
+  background-color: #2d8b96;
+}
 
 .nsm7Bb-HzV7m-LgbsSe-MJoBVe{
   min-width: 67% !important;
