--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -220,7 +220,9 @@ body {
 }
 
 .g_id_signin{
+  align-items: center !important;
+  text-align: center !important;
   min-width: 67% !important;
   max-width: 67% !important;
-  background-color: #2d8b96;
+  background-color: #2d8b9600;
 }
