--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -219,10 +219,15 @@ body {
   margin: 0 10px;
 }
 
+.ContGoogle{
+width: 67%;
+background-color: #2e7d7a00;
+}
+
 .g_id_signin{
   align-items: center !important;
   text-align: center !important;
-  min-width: 67% !important;
-  max-width: 67% !important;
+  min-width: 100% !important;
+  max-width: 100% !important;
   background-color: #2d8b9600;
 }
