--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -220,14 +220,17 @@ body {
 }
 
 .ContGoogle{
+  align-items: center !important;
+  text-align: center !important;
+  align-self: center !important;
+  margin-left: 20%;
 width: 67%;
 background-color: #2e7d7a00;
 }
 
 .g_id_signin{
-  align-items: center !important;
-  text-align: center !important;
-  min-width: 100% !important;
-  max-width: 100% !important;
+
+  min-width: 67% !important;
+  max-width: 67% !important;
   background-color: #2d8b9600;
 }
