--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -96,7 +96,7 @@ body {
   padding: 15px 10px 17px 45px;
   border: 1px solid #ddd;
   border-radius: 50px;
-  background-color: #6ABDB1;
+  background-color: #6abdb1;
   color: #fafafa;
   font-family: "Kodchasan", sans-serif;
   text-align: left; /* Align text to the left */
@@ -117,7 +117,7 @@ body {
   padding: 10px 10px 10px 0px;
   width: 100%;
   color: #fff;
-  background-color: #6ABDB1 !important;
+  background-color: #6abdb1 !important;
   border: none;
 }
 
@@ -126,43 +126,42 @@ body {
 }
 
 .showPasswordLabel {
-    display: flex;
-    cursor: pointer;
-    margin-left: -135px; /* Adjust as needed */
+  display: flex;
+  cursor: pointer;
+  margin-left: -135px; /* Adjust as needed */
 }
 
 .showPasswordLabel input[type="checkbox"] {
-    display: none; /* Hide the default checkbox */
+  display: none; /* Hide the default checkbox */
 }
 
 .showPasswordLabel label {
-    position: relative;
-    padding-left: 10px;
-    cursor: pointer;
-    color: #2d8b96;
-    font-weight: 700;
-    font-size: .9rem;
-    font-family: "Kodchasan", sans-serif;
+  position: relative;
+  padding-left: 10px;
+  cursor: pointer;
+  color: #2d8b96;
+  font-weight: 700;
+  font-size: 0.9rem;
+  font-family: "Kodchasan", sans-serif;
 }
 
 .showPasswordLabel label::before {
-    content: "";
-    position: absolute;
-    left: -25%;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 22px; /* Reduced width */
-    height: 22px; /* Reduced height */
-    border-radius: 50%;
-    border: 1px solid #2d8b96; /* Reduced border thickness */
-    background-color: #ffffff00;
-    transition: background-color 0.3s;
+  content: "";
+  position: absolute;
+  left: -25%;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 22px; /* Reduced width */
+  height: 22px; /* Reduced height */
+  border-radius: 50%;
+  border: 1px solid #2d8b96; /* Reduced border thickness */
+  background-color: #ffffff00;
+  transition: background-color 0.3s;
 }
 
 .showPasswordLabel input[type="checkbox"]:checked + label::before {
-    background-color: #39b09e; /* Change background when checked */
+  background-color: #39b09e; /* Change background when checked */
 }
-
 
 .createAcc,
 .forgotPass {
@@ -181,7 +180,7 @@ body {
 .createAcc:hover,
 .forgotPass:hover {
   color: #439099;
-  text-decoration:none; /* Keep underline on hover */
+  text-decoration: none; /* Keep underline on hover */
 }
 
 .frontImg {
@@ -200,7 +199,6 @@ body {
   overflow: hidden;
 }
 
-
 .divider {
   display: flex;
   align-items: center;
@@ -214,22 +212,21 @@ body {
 .divider::after {
   content: "";
   flex: 1;
-  width: 100px;               /* Ensure they have some width */
-  border-bottom: 2px solid #439099; 
+  width: 100px; /* Ensure they have some width */
+  border-bottom: 2px solid #439099;
   margin: 0 10px;
 }
 
-.ContGoogle{
+.ContGoogle {
   align-items: center !important;
   text-align: center !important;
   align-self: center !important;
-  margin-left: 20%;
-width: 67%;
-background-color: #2e7d7a00;
+  margin-left: 25%;
+  width: 67%;
+  background-color: #2e7d7a00;
 }
 
-.g_id_signin{
-
+.g_id_signin {
   min-width: 67% !important;
   max-width: 67% !important;
   background-color: #2d8b9600;
