--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -222,7 +222,7 @@ body {
   text-align: center !important;
   align-self: center !important;
   width: 67%;
-  background-color: #2e7d7a;
+  background-color: #2e7d7a00;
 }
 
 .g_id_signin {
